--- a/package.json
+++ b/package.json
@@ -5,40 +5,22 @@
   "license": "BSD-3-Clause",
   "description": "An actions menu gives the opportunity to group a set of actions available for a specific context under a single menu",
   "scripts": {
-    "test": "grunt test"
+    "build": "webpack"
   },
   "keywords": [
     "angular"
   ],
-  "main": "./dist/ovh-angular-actions-menu.min.js",
+  "main": "./src/ovh-angular-actions-menu.js",
   "repository": "ovh-ux/ovh-angular-actions-menu",
-  "dependencies": {},
+  "dependencies": {
+      "ovh-angular-responsive-popover": "^4.0.1",
+      "angular-translate": "^2.17.0",
+      "jquery": "^2.1.3"
+  },
   "devDependencies": {
     "eslint": "^4.1.1",
     "eslint-config-ovh": "^0.1.1",
-    "grunt-eslint": "^20.0.0",
     "autoprefixer-core": "^5.2.1",
-    "grunt": "0.4.x",
-    "grunt-angular-templates": "^1.0.4",
-    "grunt-bump": "~0.5.0",
-    "grunt-complexity": "~0.1.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-ovh-translation": "^2.1.1",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-csslint": "~0.4.0",
-    "grunt-contrib-cssmin": "^1.0.1",
-    "grunt-contrib-jshint": "~0.11.0",
-    "grunt-contrib-less": "^1.3.0",
-    "grunt-contrib-uglify": "~0.9.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-jscs": "^2.8.0",
-    "grunt-karma": "~0.12.0",
-    "grunt-ng-annotate": "~0.10.0",
-    "grunt-ngdocs": "^0.2.5",
-    "grunt-postcss": "^0.8.0",
-    "grunt-wiredep": "^3.0.1",
     "jasmine-core": "^2.4.1",
     "jasmine-spec-reporter": "^2.4.0",
     "jshint-stylish": "~2.0.0",
@@ -48,6 +30,10 @@
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "matchdep": "^1.0.0"
+    "matchdep": "^1.0.0",
+    "ng-annotate-webpack-plugin": "^0.3.0",
+    "raw-loader": "^0.5.1",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3"
   }
 }
