refactor: common files (eslint, styleslint ...)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,13 @@
 {
-    "extends": "./node_modules/eslint-config-ovh/configs/es5-browser.js",
-    "rules": {
-        "consistent-this": "warn",
-        "no-magic-numbers": "warn",
-        "no-use-before-define": "warn"
-    }
- }
+  "root": true,
+  "extends": "airbnb-base",
+  "parser": "babel-eslint",
+  "plugins": ["angular"],
+  "env": {
+    "browser": true,
+    "jquery": true
+  },
+  "rules": {
+    "import/no-unresolved": 0
+  }
+}
