--- a/package.json
+++ b/package.json
@@ -5,35 +5,69 @@
   "license": "BSD-3-Clause",
   "description": "An actions menu gives the opportunity to group a set of actions available for a specific context under a single menu",
   "scripts": {
-    "build": "webpack"
+    "test": "yarn run lint",
+    "lint": "run-p lint:css lint:js",
+    "lint:css": "stylelint 'src/**/*.less' --fix",
+    "lint:js": "eslint --quiet --fix ./src",
+    "version": "npx conventional-changelog-cli -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
+    "postversion": "git push && git push --tags",
+    "build": "rollup -c",
+    "prepare": "rollup -c"
   },
   "keywords": [
     "angular"
   ],
-  "main": "./src/ovh-angular-actions-menu.js",
+  "files": [
+    "dist"
+  ],
+  "lint-staged": {
+    "*.html": [
+      "htmlhint 'src/**/*.html'"
+    ],
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.less": [
+      "stylelint 'src/**/*.less' --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "main": "./dist/ovh-angular-actions-menu.js",
   "repository": "ovh-ux/ovh-angular-actions-menu",
   "dependencies": {
-      "ovh-angular-responsive-popover": "^4.0.1",
-      "angular-translate": "^2.17.0",
-      "jquery": "^2.1.3"
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
-    "eslint": "^4.1.1",
-    "eslint-config-ovh": "^0.1.1",
-    "autoprefixer-core": "^5.2.1",
-    "jasmine-core": "^2.4.1",
-    "jasmine-spec-reporter": "^2.4.0",
-    "jshint-stylish": "~2.0.0",
-    "karma": "~0.13.22",
-    "karma-jasmine": "~0.3.0",
-    "karma-spec-reporter": "0.0.26",
-    "karma-phantomjs-launcher": "~1.0.4",
-    "karma-ng-html2js-preprocessor": "~0.1.0",
-    "phantomjs-prebuilt": "^2.1.14",
-    "matchdep": "^1.0.0",
-    "ng-annotate-webpack-plugin": "^0.3.0",
-    "raw-loader": "^0.5.1",
-    "webpack": "^4.8.1",
-    "webpack-cli": "^2.1.3"
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@commitlint/cli": "^7.1.2",
+    "@commitlint/config-angular": "^7.1.2",
+    "@commitlint/config-conventional": "^7.1.2",
+    "@ovh-ux/component-rollup-config": "^1.1.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-angular": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "htmlhint": "^0.10.0",
+    "husky": "^1.1.0",
+    "lint-staged": "^7.3.0",
+    "npm-run-all": "^4.1.3",
+    "stylelint": "^9.6.0",
+    "stylelint-config-standard": "^18.2.0"
+  },
+  "peerDependencies": {
+    "angular": "^1.7.0",
+    "angular-translate": "^2.17.0",
+    "jquery": "^2.1.3",
+    "ovh-angular-responsive-popover": "^5.0.0-alpha.0"
   }
 }
