--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "description": "An actions menu gives the opportunity to group a set of actions available for a specific context under a single menu",
   "scripts": {
     "test": "yarn run lint",
-    "lint": "run-p lint:css lint:js",
+    "lint": "run-p lint:html lint:css lint:js",
+    "lint:html": "htmlhint 'src/**/*.html'",
     "lint:css": "stylelint 'src/**/*.less' --fix",
     "lint:js": "eslint --quiet --fix ./src",
     "version": "npx conventional-changelog-cli -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
@@ -20,25 +21,6 @@
   "files": [
     "dist"
   ],
-  "lint-staged": {
-    "*.html": [
-      "htmlhint 'src/**/*.html'"
-    ],
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ],
-    "*.less": [
-      "stylelint 'src/**/*.less' --fix",
-      "git add"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "main": "./dist/ovh-angular-actions-menu.js",
   "repository": "ovh-ux/ovh-angular-actions-menu",
   "dependencies": {
@@ -50,7 +32,6 @@
     "@babel/preset-env": "^7.1.0",
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-angular": "^7.1.2",
-    "@commitlint/config-conventional": "^7.1.2",
     "@ovh-ux/component-rollup-config": "^1.1.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.6.1",
