--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "ovh-angular-actions-menu",
   "version": "4.0.0",
-  "author": "OVH SAS",
-  "license": "BSD-3-Clause",
   "description": "An actions menu gives the opportunity to group a set of actions available for a specific context under a single menu",
-  "scripts": {
-    "test": "yarn run lint",
-    "lint": "run-p lint:html lint:css lint:js",
-    "lint:html": "htmlhint 'src/**/*.html'",
-    "lint:css": "stylelint 'src/**/*.less' --fix",
-    "lint:js": "eslint --quiet --fix ./src",
-    "version": "npx conventional-changelog-cli -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
-    "postversion": "git push && git push --tags",
-    "build": "rollup -c",
-    "prepare": "rollup -c"
-  },
   "keywords": [
     "angular"
   ],
+  "repository": "ovh-ux/ovh-angular-actions-menu",
+  "license": "BSD-3-Clause",
+  "author": "OVH SAS",
   "files": [
     "dist"
   ],
   "main": "./dist/ovh-angular-actions-menu.js",
-  "repository": "ovh-ux/ovh-angular-actions-menu",
+  "scripts": {
+    "build": "rollup -c",
+    "lint": "run-p lint:html lint:css lint:js",
+    "lint:css": "stylelint 'src/**/*.less' --fix",
+    "lint:html": "htmlhint 'src/**/*.html'",
+    "lint:js": "eslint --quiet --fix ./src",
+    "prepare": "rollup -c",
+    "test": "yarn run lint",
+    "version": "npx conventional-changelog-cli -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
+    "postversion": "git push && git push --tags"
+  },
   "dependencies": {
     "lodash": "^4.17.11"
   },
