--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/ovh-angular-actions-menu.js",
+  "main": "./dist/cjs/ovh-angular-actions-menu.js",
   "scripts": {
     "build": "rollup -c",
     "lint": "run-p lint:html lint:css lint:js",
@@ -23,6 +23,7 @@
     "version": "npx conventional-changelog-cli -p angular -i CHANGELOG.md -s && git add CHANGELOG.md",
     "postversion": "git push && git push --tags"
   },
+  "browser": "./dist/umd/ovh-angular-actions-menu.js",
   "dependencies": {
     "lodash": "^4.17.11"
   },
@@ -32,7 +33,7 @@
     "@babel/preset-env": "^7.1.0",
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-angular": "^7.1.2",
-    "@ovh-ux/component-rollup-config": "^2.0.0",
+    "@ovh-ux/component-rollup-config": "^5.0.0-beta.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
