--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/cjs/ovh-angular-actions-menu.js",
-  "module": "./dist/esm/ovh-angular-actions-menu.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
   "browser": "./dist/umd/ovh-angular-actions-menu.js",
   "scripts": {
     "build": "rollup -c",
