--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "stylelint-config-standard": "^18.2.0"
   },
   "peerDependencies": {
+    "@ovh-ux/ng-ovh-responsive-popover": "^5.0.0-beta.0",
     "angular": "^1.7.0",
     "angular-translate": "^2.17.0",
-    "jquery": "^2.1.3",
-    "ovh-angular-responsive-popover": "^5.0.0-alpha.0"
+    "jquery": "^2.1.3"
   }
 }
