--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "stylelint-config-standard": "^19.0.0"
   },
   "peerDependencies": {
-    "@ovh-ux/ng-ovh-responsive-popover": "^5.0.0-beta.0",
+    "@ovh-ux/ng-ovh-responsive-popover": "^5.0.0",
     "angular": "^1.7.0",
     "angular-translate": "^2.17.0",
     "jquery": "^2.1.3"
